@@ -46,6 +46,9 @@ projection$stress
   \item{layout <- matrix(c(0), nrow=chart$number_of_points,
   ncol=projection$number_of_dimensions)}{set layout to matrix.}
 
+  \item{set_layout(matrix(c(0), nrow=chart$number_of_points,
+  ncol=projection$number_of_dimensions))}{set layout to matrix.}
+
   \item{transformed_layout}{matrix with point coordinates,
   transformation applied.}
 
