@@ -8,6 +8,7 @@ acmacs.r NEWS -- history of user-visible changes.
 ** use projection$set_transformation(matrix(...)), projection$transformation <- matrix(...) does not work (bug in Rcpp?)
 ** error message about locationdb absence suppressed
 ** set the column basis for each serum individually
+** applying procrustes (transformation and translation) to layout (R matrix)
 
 * Changes in 2.99.1 (2019-04-30)
 ** Avoiding libomp double initialisation error by using libomp coming with R under macOS
